src/fhiclcpp/fhiclcpp/test/testFiles/fail/include_fail.fcl
#===========================================
# Testing Incorrect Include Statement Syntax
# What's Wrong: No space between #include and file name
#===========================================

#include"filename.ext"
